--- a/css/styles.css
+++ b/css/styles.css
@@ -92,10 +92,15 @@ body{
 }
 
 .slider-image{
+    max-height: 47vw;
+    min-height: 47vw;
+    max-width:100%;
+    min-width: 100%;
     margin-top: 20px;
     margin-bottom: 25px;
-    width: 100%;
+    /* width: 100%;
     height: auto;
+    object-fit: contain; */
 }
 
 .slide-controls-container{
@@ -1300,6 +1305,21 @@ input[type="text"], input[type="email"], input[type="tel"]{
     }
 }
 
+
+
+
+
+@media screen and (min-width: 481px) and (max-width: 599.5px) {
+    .slider-image{
+        margin-top: 20px;
+        margin-bottom: 25px;
+        max-height: 47vw;
+        min-height: 47vw;
+        max-width:100%;
+        min-width: 100%;
+    }
+}
+
 @media screen and (min-width: 600px){
     .read-more-btn{
         /* padding: 6px 16px; */
@@ -1316,9 +1336,17 @@ input[type="text"], input[type="email"], input[type="tel"]{
         max-width: 90%;
         margin: 0 auto;
     }
+    .slider-image{
+        margin-top: 20px;
+        margin-bottom: 25px;
+        max-height: 47vw;
+        min-height: 47vw;
+        max-width:100%;
+        min-width: 100%;
+ 
 }
 
-
+}
 
 @media screen and (max-width: 480px){
     .is-hidden{
@@ -1363,9 +1391,11 @@ font-size: 15px;
 
     .slider-image{
         margin-top: 20px;
-    margin-bottom: 25px;
-        width: 100%;
-        height: auto;
+        margin-bottom: 25px;
+        max-height: 47vw;
+        min-height: 47vw;
+        max-width:100%;
+        min-width: 100%;
     }
     
     .r3play-case-video{
@@ -1513,6 +1543,14 @@ font-size: 15px;
         .slider-overview-paragraph{
             padding: 0 28px;
         }
+        .slider-image{
+            margin-top: 20px;
+            margin-bottom: 25px;
+            max-height: 47vw;
+            min-height: 47vw;
+            max-width:100%;
+            min-width: 100%;
+        }
     }
     
     @media screen and (min-width: 951px) {
@@ -1522,13 +1560,28 @@ font-size: 15px;
         .projects-information_container--item:last-child{
             grid-column: 1 / span 2;
          }
+         .slider-image{
+            margin-top: 20px;
+            margin-bottom: 25px;
+            max-height: 47vw;
+            min-height: 47vw;
+            max-width:100%;
+            min-width: 100%;
+        }
     }
     
 @media screen and (min-width:481px) and (max-width: 920px) {
     .is-hidden{
         display:none;
     }
-
+    .slider-image{
+        margin-top: 20px;
+        margin-bottom: 25px;
+        max-height: 47vw;
+        min-height: 47vw;
+        max-width:100%;
+        min-width: 100%;
+    }
     .slider-overview-paragraph{
         padding: 0 28px;
     }
@@ -1592,13 +1645,6 @@ font-size: 15px;
     }
 
 
-    /* input#hamburger{
-        display: none;
-        } */
-    /* #hamburger:checked ~ ul{
-        right: 0;
-        
-        } */
         .hamburger-symbol{
             font-size:40px;
             margin-right:10px;
@@ -1631,14 +1677,11 @@ font-size: 15px;
 }
 
 
-.hamburger-symbol{
-        
-
-        }
         .contact-links-containers{
             width: 49%;
             display: inline-block;
         }
+        
 
     }
 @media screen and (min-width:921px){
@@ -1674,4 +1717,5 @@ font-size: 15px;
         width: 33%;
         display: inline-block;
     }
+    
 }
